Fix colors, adjust gap and added styles to CSS

--- a/animeptm/styles/index.css
+++ b/animeptm/styles/index.css
@@ -144,30 +144,37 @@ h1 {
 }
 
 h2 {
-    background-image: radial-gradient(#e5f9e0, #ffbb0081);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
+    color: #292929;
 }
 
 .card__container {
     display: grid;
-    gap: 10px;
+    gap: 20px;
     margin: 10px 0 20px;
 }
 
 .card {
     padding: 1em;
-    background-image: radial-gradient(hsla(34, 100%, 46%, 0.502), #292929);
+    background-image: radial-gradient(hsl(34deg 100% 63.65%) 60%, #292929 100%);
+    width: 320px;
+    margin-inline: auto;
 }
 
-.card iframe {
+/* .card iframe {
     border: none;
     display: block;
-    margin: 0 auto 10px;
     max-width: 525px;
+    margin: 0 auto 10px;
     width: 100%;
     height: auto;
+    } */
+
+.card img {
+    display: block;
+    margin: 0 auto 10px;
+    width: 280px;
+    height: auto;
+
 }
 
 .synopsis {
@@ -179,12 +186,16 @@ h2 {
     -webkit-box-orient: vertical;
     max-width: 525px;
     margin-inline: auto;
+    color: #000;
 }
 
 .card button {
     display: block;
     margin: 10px auto 0;
     padding: .5em 1em;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
 }
 
 .social-media__container {
